--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
   <title>Rock Paper Scissors</title>
 </head>
 <body>
-  
+  <div class="container">
+    <div class="buttons">
+      <button class="btn">Rock</button>
+      <button class="btn">Paper</button>
+      <button class="btn">Scissors</button>
+    </div>
+    <div class="score">
+        Player: <span id="player">0</span>
+        Computer: <span id="comp">0</span>
+    </div>
+    <div class="rounds"></div>
+  </div>
   <script src="game.js"></script>
 </body>
 </html>
