--- a/index.html
+++ b/index.html
@@ -15,11 +15,22 @@
       <button class="btn">Paper</button>
       <button class="btn">Scissors</button>
     </section>
-    <section class="score">
-        Player: <span id="player">0</span>
-        Computer: <span id="comp">0</span>
+    <section class="scoreboard">
+      <div class="score player">
+          Player: <span id="player">0</span>
+          <div class="pick"></div>
+      </div>
+      <div class="score comp">
+          Computer: <span id="comp">0</span>
+          <div class="pick"></div>
+      </div>
     </section>
-    <section class="rounds"></section>
+    <section class="winner">
+      <div class="message">
+        You've won!
+      </div>
+      <button class="btn">Play Again?</button>
+    </section>
   </div>
   <script src="game.js"></script>
 </body>
