--- a/index.html
+++ b/index.html
@@ -16,21 +16,16 @@
       <button class="btn">Scissors</button>
     </section>
     <section class="scoreboard">
-      <div class="score player">
+      <div class="score player-details">
           Player: <span id="player">0</span>
-          <div class="pick"></div>
+          <div class="player-pick">-</div>
       </div>
-      <div class="score comp">
+      <div class="score comp-details">
           Computer: <span id="comp">0</span>
-          <div class="pick"></div>
+          <div class="comp-pick">-</div>
       </div>
     </section>
-    <section class="winner">
-      <div class="message">
-        You've won!
-      </div>
-      <button class="btn">Play Again?</button>
-    </section>
+    <section class="winner"></section>
   </div>
   <script src="game.js"></script>
 </body>
